# LexiFlash

./: .gitignore  README.md  pyproject.toml  test_processor.py
.github/workflows/: build-windows.yml  python-app.yml
Backend/: main.py
Backend/src/: dictionary_lookup.py  exporter.py  processor.py
docs/adr/: 001-nlp-engine-rust-migration.md
lexianki_rs/src/: lib.rs
lexiflash_app/: Cargo.toml
lexiflash_app/src/: main.rs  mock_data.rs  styles.rs
lexiflash_app/src/components/: create_deck.rs  dashboard.rs
lexiflash_nlp/src/: lib.rs
newstoanki_rs/src/: lib.rs
src/: anki_generator.py  dictionary_lookup.py  processor.py  scraper.py
